refactor: correction code smells